<resources>
    <string name="app_name">GameSetMatch</string>

    <!-- Error text -->
    <string name="incorrect_credentials">* Incorrect username or password.</string>
    <string name="password_short">Password should be at least 8 characters long.</string>
    <string name="weak_password">Weak Password! </string>
    <string name="medium_password">Good Password! </string>
    <string name="strong_password">Strong Password! </string>
    <string name="empty_username">Username can not be empty</string>
    <string name="username_taken">This username already exist.</string>
    <string name="empty_password">Password can not be empty</string>
    <string name="unmatched_password">The passwords don\'t match</string>
    <string name="empty_players_list">No players found. Added players will be shown here.</string>

    <!-- Buttons text -->
    <string name="get_started">Get Started.</string>
    <string name="done">Done</string>
    <string name="add_players">Add Players</string>
    <string name="start_a_match">Start a match</string>
    <string name="make_teams">Make Teams</string>
    <string name="match_history">Match history</string>

    <!-- Basic text -->
    <string name="homepage_text">Create Teams.\nOfficiate Matches.\nHave fun.</string>
    <string name="registration_text">New here?</string>
    <string name="registration_btn">Register</string>
    <string name="sign_in_text">Already a user?</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="username">Username</string>
    <string name="name">Player\'s Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="on_boarding">Get\nOn\nBoard</string>
    <string name="sign_in_message">Let\'s\nGet\nGoing</string>
    <string name="password">Password</string>
    <string name="player_grade">Player\'s Grade:</string>
    <string name="football_grade">Grade (Football): </string>
    <string name="football">Football</string>
    <string name="basketball_grade">Grade (Basketball): </string>
    <string name="basketball">Basketball</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="select_sport">Select Sport (Atleast one)</string>
    <string name="cancel_btn">Cancel</string>
</resources>