<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/black"
    tools:context=".signupsignin.SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/on_boarding"
        android:textColor="@color/white"
        android:lineSpacingMultiplier="1.3"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/username_tv"
            style="@style/InputTagTV"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_et"
            style="@style/InputFieldStyle"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_tv"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/email_tv"
            style="@style/InputTagTV"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_et" />

        <EditText
            android:id="@+id/email_et"
            style="@style/InputFieldStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_tv" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/InputTagTV"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <EditText
            android:id="@+id/password_et"
            style="@style/InputFieldStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done_btn"
            style="@style/ButtonsStyle"
            android:layout_marginTop="24dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_et" />

        <View
            style="@style/HiglightStyle"
            app:layout_constraintBottom_toBottomOf="@id/done_btn"
            app:layout_constraintEnd_toEndOf="@id/done_btn"
            app:layout_constraintStart_toStartOf="@id/done_btn"
            app:layout_constraintTop_toTopOf="@id/done_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>