<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="20dp"
        tools:context=".signupsignin.SignInActivity">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/sign_in_message"
            android:textColor="@color/white"
            android:lineSpacingMultiplier="1.3"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/username_tv"
                style="@style/InputTagTV"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username_et"
                style="@style/InputFieldStyle"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_tv" />

            <TextView
                android:id="@+id/password_tv"
                style="@style/InputTagTV"
                android:text="@string/password"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_et" />

            <EditText
                android:id="@+id/password_et"
                style="@style/InputFieldStyle"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_btn"
                style="@style/ButtonsStyle"
                android:text="@string/sign_in_btn"
                android:layout_marginTop="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_et" />

            <View
                style="@style/HiglightStyle"
                app:layout_constraintBottom_toBottomOf="@id/sign_in_btn"
                app:layout_constraintEnd_toEndOf="@id/sign_in_btn"
                app:layout_constraintStart_toStartOf="@id/sign_in_btn"
                app:layout_constraintTop_toTopOf="@id/sign_in_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>