<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="20dp"
        tools:context=".ui.HomePageActivity">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/gilroy_bold"
            tools:text="Good Morning, Basu"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message_tv">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_players_btn"
                style="@style/MainMenuButtonsStyle"
                android:layout_width="0dp"
                android:text="@string/add_players"
                app:layout_constraintEnd_toEndOf="@+id/start_match_btn"
                app:layout_constraintStart_toStartOf="@+id/start_match_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                style="@style/HighlightStyle"
                app:layout_constraintBottom_toBottomOf="@+id/add_players_btn"
                app:layout_constraintEnd_toEndOf="@+id/add_players_btn"
                app:layout_constraintStart_toStartOf="@+id/add_players_btn"
                app:layout_constraintTop_toTopOf="@+id/add_players_btn" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/make_teams_btn"
                style="@style/MainMenuButtonsStyle"
                android:layout_width="0dp"
                android:layout_marginTop="30dp"
                android:text="@string/make_teams"
                app:layout_constraintEnd_toEndOf="@+id/start_match_btn"
                app:layout_constraintStart_toStartOf="@+id/start_match_btn"
                app:layout_constraintTop_toBottomOf="@id/add_players_btn" />

            <View
                style="@style/HighlightStyle"
                app:layout_constraintBottom_toBottomOf="@+id/make_teams_btn"
                app:layout_constraintEnd_toEndOf="@+id/make_teams_btn"
                app:layout_constraintStart_toStartOf="@+id/make_teams_btn"
                app:layout_constraintTop_toTopOf="@+id/make_teams_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_match_btn"
                style="@style/MainMenuButtonsStyle"
                android:layout_width="0dp"
                android:layout_marginTop="30dp"
                android:text="@string/start_a_match"
                app:layout_constraintEnd_toEndOf="@+id/match_history_btn"
                app:layout_constraintStart_toStartOf="@+id/match_history_btn"
                app:layout_constraintTop_toBottomOf="@id/make_teams_btn" />

            <View
                style="@style/HighlightStyle"
                app:layout_constraintBottom_toBottomOf="@+id/start_match_btn"
                app:layout_constraintEnd_toEndOf="@+id/start_match_btn"
                app:layout_constraintStart_toStartOf="@+id/start_match_btn"
                app:layout_constraintTop_toTopOf="@+id/start_match_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/match_history_btn"
                style="@style/MainMenuButtonsStyle"
                android:layout_marginTop="30dp"
                android:text="@string/match_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_match_btn" />

            <View
                style="@style/HighlightStyle"
                app:layout_constraintBottom_toBottomOf="@+id/match_history_btn"
                app:layout_constraintEnd_toEndOf="@+id/match_history_btn"
                app:layout_constraintStart_toStartOf="@+id/match_history_btn"
                app:layout_constraintTop_toTopOf="@+id/match_history_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
